--- a/index.html
+++ b/index.html
@@ -1,309 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ONxAI</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        body {
-            background: #000;
-            color: #fff;
-            line-height: 1.6;
-            overflow-x: hidden;
-        }
-
-        /* SCROLL GRADIENT OVERLAY */
-        .scroll-gradient {
-            position: fixed;
-            inset: 0;
-            background: linear-gradient(
-                90deg,
-                rgba(0, 0, 0, 1) 0%,
-                rgba(69, 72, 79, 1) 50%,
-                rgb(70, 73, 82) 100%
-            );
-            opacity: 0;
-            pointer-events: none;
-            z-index: -1;
-            transition: opacity 0.1s linear;
-        }
-
-        /* NAV BAR */
-        nav {
-            position: sticky;
-            top: 0;
-            background: #000;
-            padding: 16px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 1px solid #222;
-            z-index: 100;
-        }
-
-        nav h1 {
-            font-size: 24px;
-            cursor: pointer;
-            letter-spacing: 1px;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 30px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: #fff;
-            font-size: 15px;
-            opacity: 0.85;
-            transition: opacity 0.2s;
-        }
-
-        nav ul li a:hover {
-            opacity: 1;
-        }
-
-        /* HERO */
-        #hero {
-            background-color: rgba(0, 0, 0, 1);
-            transition: background-color 0.1s linear;            min-height: 90vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 0 12%;
-            animation: fadeIn 1.2s ease forwards;
-        }
-
-        .hero-title {
-            font-size: 64px;
-            font-weight: 700;
-            letter-spacing: 3px;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: slideUp 1s ease forwards;
-        }
-
-        .hero-subtitle {
-            margin-top: 20px;
-            font-size: 18px;
-            max-width: 700px;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: slideUp 1s ease forwards;
-            animation-delay: 0.3s;
-        }
-
-        .hero-btn {
-            margin-top: 40px;
-            padding: 14px 36px;
-            border-radius: 30px;
-            background: #fff;
-            color: #000;
-            border: none;
-            font-size: 15px;
-            font-weight: 600;
-            cursor: pointer;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: slideUp 1s ease forwards;
-            animation-delay: 0.6s;
-            transition: transform 0.2s, opacity 0.2s;
-        }
-
-        .hero-btn:hover {
-            transform: translateY(-2px);
-            opacity: 0.9;
-        }
-
-        /* SECTIONS */
-        section {
-            padding: 90px 15%;
-        }
-
-        h2 {
-            font-size: 38px;
-            margin-bottom: 20px;
-            font-weight: 600;
-        }
-
-        h3 {
-            font-size: 24px;
-            margin: 30px 0 12px;
-            font-weight: 500;
-        }
-
-        p {
-            font-size: 17px;
-            opacity: 0.85;
-            max-width: 800px;
-        }
-
-        ul {
-            margin-top: 12px;
-            margin-left: 20px;
-        }
-
-        ul li {
-            margin-bottom: 8px;
-            opacity: 0.85;
-        }
-
-        /* DISCORD */
-        #discord {
-            background-color: #000;
-            border: 1px solid #222;
-            border-radius: 18px;
-            text-align: center;
-            margin: 80px 15%;
-            padding: 60px;
-        }
-
-        /* FOOTER */
-        footer {
-            background-color: #000;
-            text-align: center;
-            padding: 40px;
-            border-top: 1px solid #222;
-            font-size: 14px;
-        }
-
-        footer a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            opacity: 0.8;
-        }
-
-        /* ANIMATIONS */
-        @keyframes slideUp {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        /* RESPONSIVE */
-        @media (max-width: 900px) {
-            nav {
-                flex-direction: column;
-                gap: 12px;
-            }
-
-            section {
-                padding: 60px 10%;
-            }
-
-            .hero-title {
-                font-size: 42px;
-            }
-        }
-    </style>
-</head>
-
-<body>
-
-    <!-- GRADIENT OVERLAY -->
-    <div class="scroll-gradient"></div>
-
-    <!-- NAV BAR -->
-    <nav>
-        <h1 onclick="location.href='/'">ONxAI</h1>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#features">Why ONxAI</a></li>
-            <li><a href="#discord">Discord</a></li>
-            <li><a href="/humanizer/">Humanizer</a></li>
-            <li><a href="/credits">Credits</a></li>
-        </ul>
-    </nav>
-
-    <!-- HERO -->
-    <section id="hero">
-        <h2 class="hero-title">ONxAI</h2>
-        <p class="hero-subtitle">
-            The most advanced Sparx-style AI assistant.<br>
-            Fast. Accurate. Reliable.
-        </p>
-        <a href="#discord">
-            <button class="hero-btn">Get Started</button>
-        </a>
-    </section>
-
-    <!-- ABOUT -->
-    <section id="about">
-        <h2>What is ONxAI?</h2>
-        <p>
-            ONxAI is a high-performance Sparx-style assistant engineered for speed,
-            precision, and clarity.
-        </p>
-    </section>
-
-    <!-- FEATURES -->
-    <section id="features">
-        <h3>Why It Matters</h3>
-        <p>ONxAI solves the problem of slow or unreliable academic tools by offering:</p>
-        <ul>
-            <li>Lightning-fast responses</li>
-            <li>High-accuracy explanations</li>
-            <li>Clean reasoning and formatting</li>
-        </ul>
-    </section>
-
-    <!-- DISCORD -->
-    <section id="discord">
-        <h2>Join Our Discord Server</h2>
-        <p>Use ONxAI for free, get support, and stay up to date.</p>
-        <a href="https://discord.gg/hpr8ssYHuJ" target="_blank">
-            <button class="hero-btn">Join Discord</button>
-        </a>
-    </section>
-
-    <!-- FOOTER -->
-    <footer>
-        © 2026 ONxAI · <a href="/credits">Credits</a>
-    </footer>
-
-    <!-- SCROLL SCRIPT -->
-    <script>
-        const gradient = document.querySelector(".scroll-gradient");
-        const hero = document.querySelector("#hero");
-
-        window.addEventListener("scroll", () => {
-            const scrollY = window.scrollY;
-            const maxScroll = window.innerHeight * 1.2;
-
-            // progress from 0 → 1
-            let progress = scrollY / maxScroll;
-            progress = Math.min(Math.max(progress, 0), 1);
-
-            // Gradient fades IN
-            gradient.style.opacity = progress;
-
-            // Hero background fades OUT
-            const heroBgOpacity = 1 - progress * 2;
-            hero.style.backgroundColor = `rgba(0, 0, 0, ${heroBgOpacity})`;
-        });
-    </script>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fira+Code:wght@300..700&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Oxanium:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
