Refactor index.html to enhance structure and styling; add credits section and improve navigation

--- a/index.html
+++ b/index.html
@@ -1,20 +1,183 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>ONxAI</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ONxAI</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  body {
+    font-family: 'Inter', sans-serif;
+    background: #000000;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(69, 72, 79, 1) 100%, rgba(71, 76, 99, 1) 50%);    color: #fff;
+    min-height: 100vh;
+  }
+
+  /* Navbar / Header */
+  nav {
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    padding: 20px 40px;
+    border-bottom: 1px solid #222;
+  }
+
+  nav button {
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: 700;
+    cursor: pointer;
+    letter-spacing: 1px;
+  }
+
+  nav button:hover {
+    opacity: 0.8;
+  }
+
+  /* Credits Section */
+  .credits {
+    max-width: 700px;
+    margin: 80px auto;
+    padding: 40px 20px;
+    background: #0b0b0b;
+    border: 1px solid #222;
+    border-radius: 18px;
+  }
+
+  .credits h1 {
+    font-size: 2.2rem;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
+  .credits h3 {
+    color: #aaa;
+    font-weight: 400;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+
+  .credits-list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .credit-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 14px 18px;
+    background: #111;
+    border: 1px solid #222;
+    border-radius: 12px;
+  }
+
+  .credit-role {
+    color: #aaa;
+    font-weight: 500;
+  }
+
+  .credit-name {
+    font-weight: 600;
+  }
+
+  /* Footer */
+  footer {
+    background-color: #000000;
+    text-align: center;
+    padding: 30px 20px;
+    border-top: 1px solid #222;
+    color: #777;
+  }
+
+  footer span {
+    color: #fff;
+    font-weight: 600;
+  }
+
+  @media (max-width: 600px) {
+    .credit-item {
+      flex-direction: column;
+      gap: 6px;
+    }
+  }
+</style>
 </head>
 <body>
-  <pre id="content">Loading...</pre>
 
-  <script>
-    fetch("https://discord-ai-base-64--gbgggvvg.replit.app")
-      .then(res => res.text())
-      .then(text => {
-        document.getElementById("content").textContent = text;
-      })
-      .catch(err => {
-        document.getElementById("content").textContent = "Failed to load.";
-      });
-  </script>
+<!-- Header -->
+<nav>
+  <button onclick="runHomeClick()">ONxAI</button>
+</nav>
+
+<!-- Credits -->
+<section class="credits">
+  <h1>Credits</h1>
+  <h3>Our Discord Usernames</h3>
+
+  <div class="credits-list">
+    <div class="credit-item">
+      <span class="credit-role">Owner</span>
+      <span class="credit-name">fadezz.dev</span>
+    </div>
+
+    <div class="credit-item">
+      <span class="credit-role">AI Lead Developer</span>
+      <span class="credit-name">fadezz.dev</span>
+    </div>
+
+    <div class="credit-item">
+      <span class="credit-role">AI Assistant Developer</span>
+      <span class="credit-name">divythedivy_1</span>
+    </div>
+
+    <div class="credit-item">
+      <span class="credit-role">Website Lead Developer</span>
+      <span class="credit-name">not_tealtie</span>
+    </div>
+
+    <div class="credit-item">
+      <span class="credit-role">Website Assistant Developer</span>
+      <span class="credit-name">divythedivy_1</span>
+    </div>
+
+    <div class="credit-item">
+      <span class="credit-role">Senior Staff Member</span>
+      <span class="credit-name">fadezz.dev</span>
+    </div>
+
+    <div class="credit-item">
+      <span class="credit-role">Staff Member</span>
+      <span class="credit-name">divythedivy_1</span>
+    </div>
+
+    <div class="credit-item">
+      <span class="credit-role">Assistant Staff Member</span>
+      <span class="credit-name">not_tealtie</span>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer>
+  © 2026 <span>ONxAI</span>. All rights reserved.
+</footer>
+
+<script>
+  function runHomeClick() {
+    window.location.href = "/";
+  }
+</script>
+
 </body>
 </html>
