Revamp index.html: enhance layout, add navigation and hero sections, and implement scroll gradient effect

--- a/index.html
+++ b/index.html
@@ -1,183 +1,309 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ONxAI</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ONxAI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
 
-<style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+        body {
+            background: #000;
+            color: #fff;
+            line-height: 1.6;
+            overflow-x: hidden;
+        }
 
-  body {
-    font-family: 'Inter', sans-serif;
-    background: #000000;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(69, 72, 79, 1) 100%, rgba(71, 76, 99, 1) 50%);    color: #fff;
-    min-height: 100vh;
-  }
+        /* SCROLL GRADIENT OVERLAY */
+        .scroll-gradient {
+            position: fixed;
+            inset: 0;
+            background: linear-gradient(
+                90deg,
+                rgba(0, 0, 0, 1) 0%,
+                rgba(69, 72, 79, 1) 50%,
+                rgb(70, 73, 82) 100%
+            );
+            opacity: 0;
+            pointer-events: none;
+            z-index: -1;
+            transition: opacity 0.1s linear;
+        }
 
-  /* Navbar / Header */
-  nav {
-    background-color: #000000;
-    display: flex;
-    align-items: center;
-    padding: 20px 40px;
-    border-bottom: 1px solid #222;
-  }
+        /* NAV BAR */
+        nav {
+            position: sticky;
+            top: 0;
+            background: #000;
+            padding: 16px 40px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #222;
+            z-index: 100;
+        }
 
-  nav button {
-    background: none;
-    border: none;
-    color: #fff;
-    font-size: 1.6rem;
-    font-weight: 700;
-    cursor: pointer;
-    letter-spacing: 1px;
-  }
+        nav h1 {
+            font-size: 24px;
+            cursor: pointer;
+            letter-spacing: 1px;
+        }
 
-  nav button:hover {
-    opacity: 0.8;
-  }
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 30px;
+        }
 
-  /* Credits Section */
-  .credits {
-    max-width: 700px;
-    margin: 80px auto;
-    padding: 40px 20px;
-    background: #0b0b0b;
-    border: 1px solid #222;
-    border-radius: 18px;
-  }
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 15px;
+            opacity: 0.85;
+            transition: opacity 0.2s;
+        }
 
-  .credits h1 {
-    font-size: 2.2rem;
-    margin-bottom: 10px;
-    text-align: center;
-  }
+        nav ul li a:hover {
+            opacity: 1;
+        }
 
-  .credits h3 {
-    color: #aaa;
-    font-weight: 400;
-    margin-bottom: 40px;
-    text-align: center;
-  }
+        /* HERO */
+        #hero {
+            background-color: rgba(0, 0, 0, 1);
+            transition: background-color 0.1s linear;            min-height: 90vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 0 12%;
+            animation: fadeIn 1.2s ease forwards;
+        }
 
-  .credits-list {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-  }
+        .hero-title {
+            font-size: 64px;
+            font-weight: 700;
+            letter-spacing: 3px;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: slideUp 1s ease forwards;
+        }
 
-  .credit-item {
-    display: flex;
-    justify-content: space-between;
-    padding: 14px 18px;
-    background: #111;
-    border: 1px solid #222;
-    border-radius: 12px;
-  }
+        .hero-subtitle {
+            margin-top: 20px;
+            font-size: 18px;
+            max-width: 700px;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: slideUp 1s ease forwards;
+            animation-delay: 0.3s;
+        }
 
-  .credit-role {
-    color: #aaa;
-    font-weight: 500;
-  }
+        .hero-btn {
+            margin-top: 40px;
+            padding: 14px 36px;
+            border-radius: 30px;
+            background: #fff;
+            color: #000;
+            border: none;
+            font-size: 15px;
+            font-weight: 600;
+            cursor: pointer;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: slideUp 1s ease forwards;
+            animation-delay: 0.6s;
+            transition: transform 0.2s, opacity 0.2s;
+        }
 
-  .credit-name {
-    font-weight: 600;
-  }
+        .hero-btn:hover {
+            transform: translateY(-2px);
+            opacity: 0.9;
+        }
 
-  /* Footer */
-  footer {
-    background-color: #000000;
-    text-align: center;
-    padding: 30px 20px;
-    border-top: 1px solid #222;
-    color: #777;
-  }
+        /* SECTIONS */
+        section {
+            padding: 90px 15%;
+        }
 
-  footer span {
-    color: #fff;
-    font-weight: 600;
-  }
+        h2 {
+            font-size: 38px;
+            margin-bottom: 20px;
+            font-weight: 600;
+        }
 
-  @media (max-width: 600px) {
-    .credit-item {
-      flex-direction: column;
-      gap: 6px;
-    }
-  }
-</style>
+        h3 {
+            font-size: 24px;
+            margin: 30px 0 12px;
+            font-weight: 500;
+        }
+
+        p {
+            font-size: 17px;
+            opacity: 0.85;
+            max-width: 800px;
+        }
+
+        ul {
+            margin-top: 12px;
+            margin-left: 20px;
+        }
+
+        ul li {
+            margin-bottom: 8px;
+            opacity: 0.85;
+        }
+
+        /* DISCORD */
+        #discord {
+            background-color: #000;
+            border: 1px solid #222;
+            border-radius: 18px;
+            text-align: center;
+            margin: 80px 15%;
+            padding: 60px;
+        }
+
+        /* FOOTER */
+        footer {
+            background-color: #000;
+            text-align: center;
+            padding: 40px;
+            border-top: 1px solid #222;
+            font-size: 14px;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            opacity: 0.8;
+        }
+
+        /* ANIMATIONS */
+        @keyframes slideUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        /* RESPONSIVE */
+        @media (max-width: 900px) {
+            nav {
+                flex-direction: column;
+                gap: 12px;
+            }
+
+            section {
+                padding: 60px 10%;
+            }
+
+            .hero-title {
+                font-size: 42px;
+            }
+        }
+    </style>
 </head>
+
 <body>
 
-<!-- Header -->
-<nav>
-  <button onclick="runHomeClick()">ONxAI</button>
-</nav>
+    <!-- GRADIENT OVERLAY -->
+    <div class="scroll-gradient"></div>
 
-<!-- Credits -->
-<section class="credits">
-  <h1>Credits</h1>
-  <h3>Our Discord Usernames</h3>
+    <!-- NAV BAR -->
+    <nav>
+        <h1 onclick="location.href='/'">ONxAI</h1>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#features">Why ONxAI</a></li>
+            <li><a href="#discord">Discord</a></li>
+            <li><a href="/humanizer/">Humanizer</a></li>
+            <li><a href="/credits">Credits</a></li>
+        </ul>
+    </nav>
 
-  <div class="credits-list">
-    <div class="credit-item">
-      <span class="credit-role">Owner</span>
-      <span class="credit-name">fadezz.dev</span>
-    </div>
+    <!-- HERO -->
+    <section id="hero">
+        <h2 class="hero-title">ONxAI</h2>
+        <p class="hero-subtitle">
+            The most advanced Sparx-style AI assistant.<br>
+            Fast. Accurate. Reliable.
+        </p>
+        <a href="#discord">
+            <button class="hero-btn">Get Started</button>
+        </a>
+    </section>
 
-    <div class="credit-item">
-      <span class="credit-role">AI Lead Developer</span>
-      <span class="credit-name">fadezz.dev</span>
-    </div>
+    <!-- ABOUT -->
+    <section id="about">
+        <h2>What is ONxAI?</h2>
+        <p>
+            ONxAI is a high-performance Sparx-style assistant engineered for speed,
+            precision, and clarity.
+        </p>
+    </section>
 
-    <div class="credit-item">
-      <span class="credit-role">AI Assistant Developer</span>
-      <span class="credit-name">divythedivy_1</span>
-    </div>
+    <!-- FEATURES -->
+    <section id="features">
+        <h3>Why It Matters</h3>
+        <p>ONxAI solves the problem of slow or unreliable academic tools by offering:</p>
+        <ul>
+            <li>Lightning-fast responses</li>
+            <li>High-accuracy explanations</li>
+            <li>Clean reasoning and formatting</li>
+        </ul>
+    </section>
 
-    <div class="credit-item">
-      <span class="credit-role">Website Lead Developer</span>
-      <span class="credit-name">not_tealtie</span>
-    </div>
+    <!-- DISCORD -->
+    <section id="discord">
+        <h2>Join Our Discord Server</h2>
+        <p>Use ONxAI for free, get support, and stay up to date.</p>
+        <a href="https://discord.gg/hpr8ssYHuJ" target="_blank">
+            <button class="hero-btn">Join Discord</button>
+        </a>
+    </section>
 
-    <div class="credit-item">
-      <span class="credit-role">Website Assistant Developer</span>
-      <span class="credit-name">divythedivy_1</span>
-    </div>
+    <!-- FOOTER -->
+    <footer>
+        © 2026 ONxAI · <a href="/credits">Credits</a>
+    </footer>
 
-    <div class="credit-item">
-      <span class="credit-role">Senior Staff Member</span>
-      <span class="credit-name">fadezz.dev</span>
-    </div>
+    <!-- SCROLL SCRIPT -->
+    <script>
+        const gradient = document.querySelector(".scroll-gradient");
+        const hero = document.querySelector("#hero");
 
-    <div class="credit-item">
-      <span class="credit-role">Staff Member</span>
-      <span class="credit-name">divythedivy_1</span>
-    </div>
+        window.addEventListener("scroll", () => {
+            const scrollY = window.scrollY;
+            const maxScroll = window.innerHeight * 1.2;
 
-    <div class="credit-item">
-      <span class="credit-role">Assistant Staff Member</span>
-      <span class="credit-name">not_tealtie</span>
-    </div>
-  </div>
-</section>
+            // progress from 0 → 1
+            let progress = scrollY / maxScroll;
+            progress = Math.min(Math.max(progress, 0), 1);
 
-<!-- Footer -->
-<footer>
-  © 2026 <span>ONxAI</span>. All rights reserved.
-</footer>
+            // Gradient fades IN
+            gradient.style.opacity = progress;
 
-<script>
-  function runHomeClick() {
-    window.location.href = "/";
-  }
-</script>
+            // Hero background fades OUT
+            const heroBgOpacity = 1 - progress * 2;
+            hero.style.backgroundColor = `rgba(0, 0, 0, ${heroBgOpacity})`;
+        });
+    </script>
 
 </body>
 </html>
